# DjantoSoft

./: .gitignore  README.md  junk.py  pyproject.toml
Mas/: manage.py
Mas/Base/: urls.py  views.py
Mas/Email/: errors.py  forms.py  mailer.py  readfiles.py  urls.py  views.py
Mas/Mas/: asgi.py  settings.py  urls.py  wsgi.py
Mas/Master/: admin.py  forms.py  models.py  urls.py  views.py
Mas/Profiles/: Initialized
Mas/Query/: urls.py  views.py
Mas/Report/: urls.py  views.py
Profiles/: Initialized
stubs.v4/1RKNu9raRSiO_UJTNEk1g6qK8oB66kPL-UBLy6yzMkM=/: _pocketfft_internal.cp38-win_amd64.pyi
stubs.v4/4Ey6kThiFADJodLSsfGlnfAyNDmUrdB7qwby0TUNcE0=/: _decomp_update.cp38-win_amd64.pyi  _fblas.cp38-win_amd64.pyi  _flapack.cp38-win_amd64.pyi  _flinalg.cp38-win_amd64.pyi  _solve_toeplitz.cp38-win_amd64.pyi
stubs.v4/4b1y0yt6o9UIhJGDPh5na2dMs3ODPAIlbJNAQRitP_g=/: bit_generator.cp38-win_amd64.pyi  bounded_integers.cp38-win_amd64.pyi  common.cp38-win_amd64.pyi  generator.cp38-win_amd64.pyi  mt19937.cp38-win_amd64.pyi  mtrand.cp38-win_amd64.pyi  pcg64.cp38-win_amd64.pyi  philox.cp38-win_amd64.pyi  sfc64.cp38-win_amd64.pyi
stubs.v4/8lNGR0KAaB6M3gpiPreyVDF0WCOWThT3pS4jakMXCWw=/: _umath_linalg.cp38-win_amd64.pyi  lapack_lite.cp38-win_amd64.pyi
stubs.v4/9UXc_K7Y_nd7nMpE16TxCckgQAdY7jI5UlZq3zYfexk=/: _stats.cp38-win_amd64.pyi  mvn.cp38-win_amd64.pyi  statlib.cp38-win_amd64.pyi
stubs.v4/Dt5_XpSqC0Tqjpx-MuEYsaC5t1MoAGp21ckpXnuEVvo=/: _sas.cp38-win_amd64.pyi
stubs.v4/EGIxdDU646sekR4qaFOFWcG4YdH5ITGsmf26EauqdE0=/: _fftpack.cp38-win_amd64.pyi  convolve.cp38-win_amd64.pyi
(+206 files in other folders)
