[tool.poetry]
name = "djantosoft"
version = "0.1.0"
description = ""
authors = ["XtremeGood <manglavishesh64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
decouple = "^0.0.7"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
